--- a/src/app/Components/userBiomedica/Reportes/crear-reporte/crear-reporte.component.html
+++ b/src/app/Components/userBiomedica/Reportes/crear-reporte/crear-reporte.component.html
@@ -89,6 +89,11 @@
           <p-select [options]="tiposFalla" formControlName="tipoFalla" placeholder="Seleccione"></p-select>
         </div>
 
+        <div class="form-item">
+          <label>Estado Operativo</label>
+          <p-select [options]="estadosOperativos" formControlName="estadoOperativo" placeholder="Seleccione"></p-select>
+        </div>
+
 
 
         <div class="form-item">
@@ -133,6 +138,45 @@
         </div>
       </div>
 
+      <div style="margin-top: 3%;"></div>
+
+      <!-- Equipo Patron Section -->
+      <div class="title-container"
+        *ngIf="reporteForm.get('tipoMantenimiento')?.value === 'Correctivo' || reporteForm.get('tipoMantenimiento')?.value === 'Preventivo'">
+        <h4><strong> EQUIPO PATRON </strong></h4>
+        <H6>Seleccione el equipo patron utilizado (Opcional)</H6>
+      </div>
+
+      <div class="custom-grid"
+        *ngIf="reporteForm.get('tipoMantenimiento')?.value === 'Correctivo' || reporteForm.get('tipoMantenimiento')?.value === 'Preventivo'">
+        <div class="form-item">
+          <label>Equipo Patron</label>
+          <p-dropdown [options]="equiposPatron" formControlName="equipoPatronIdFk" optionLabel="nombres"
+            optionValue="id" placeholder="Seleccione Equipo (Nombre)" [filter]="true" filterBy="nombres"
+            [showClear]="true" appendTo="body" (onChange)="onSelectPatron()"></p-dropdown>
+        </div>
+
+        <div class="form-item">
+          <label>Marca</label>
+          <input pInputText [value]="selectedPatron?.marca || ''" readonly placeholder="Marca" />
+        </div>
+
+        <div class="form-item">
+          <label>Modelo</label>
+          <input pInputText [value]="selectedPatron?.modelo || ''" readonly placeholder="Modelo" />
+        </div>
+
+        <div class="form-item">
+          <label>Serie</label>
+          <input pInputText [value]="selectedPatron?.serie || ''" readonly placeholder="Serie" />
+        </div>
+
+        <div class="form-item">
+          <label>Placa Inventario</label>
+          <input pInputText [value]="selectedPatron?.placa || ''" readonly placeholder="Placa" />
+        </div>
+      </div>
+
       <!-- Specific Measurements Section -->
       <div class="title-container"
         *ngIf="reporteForm.get('tipoMantenimiento')?.value === 'Preventivo' && valoresMedicionesFormArray.controls.length > 0">
@@ -173,38 +217,37 @@
         </div>
       </div>
 
-      <div class="title-container" *ngIf="repuestosFormArray">
-        <h4><strong> INSUMOS / REPUESTOS </strong></h4>
-        <H6>Registre los repuestos o insumos utilizados en el mantenimiento</H6>
+      <!-- Initial Conditions Section (Global) -->
+      <div class="title-container"
+        *ngIf="reporteForm.get('tipoMantenimiento')?.value === 'Preventivo' && condicionesInicialesFormArray.controls.length > 0">
+        <h4><strong> CONDICIONES INICIALES </strong></h4>
+        <H6>Verifique las condiciones iniciales del equipo</H6>
       </div>
-      <div>
-        <div formArrayName="repuestos" class="w-full px-3">
-          <p-table [value]="repuestosFormArray.controls" responsiveLayout="scroll" styleClass="p-datatable-sm">
+
+      <div
+        *ngIf="reporteForm.get('tipoMantenimiento')?.value === 'Preventivo' && condicionesInicialesFormArray.controls.length > 0"
+        class="mb-5">
+        <div formArrayName="condicionesIniciales" class="w-full px-3">
+          <p-table [value]="condicionesInicialesFormArray.controls" responsiveLayout="scroll"
+            styleClass="p-datatable-sm">
             <ng-template pTemplate="header">
               <tr>
-                <th style="width: 30%">Nombre Insumo</th>
-                <th style="width: 20%">Cantidad</th>
-                <th style="width: 30%">Comprobante Egreso</th>
-                <th style="width: 10%">Acción</th>
+                <th style="width: 20%" class="text-center">Cumple</th>
+                <th style="width: 50%">Condición</th>
+                <th style="width: 30%">Observaciones</th>
               </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-repuesto let-i="rowIndex">
+            <ng-template pTemplate="body" let-grupo let-i="rowIndex">
               <tr [formGroupName]="i">
-                <td><input pInputText formControlName="nombreInsumo" class="w-full" placeholder="Nombre" /></td>
-                <td><input pInputText formControlName="cantidad" class="w-full" placeholder="Cant." /></td>
-                <td><input pInputText formControlName="comprobanteEgreso" class="w-full"
-                    placeholder="Ref. / Comprobante" /></td>
                 <td class="text-center">
-                  <button pButton type="button" icon="pi pi-trash"
-                    class="p-button-danger p-button-rounded p-button-text" (click)="eliminarRepuesto(i)"></button>
+                  <p-dropdown [options]="opcionesCumplimiento" formControlName="cumple" optionLabel="label"
+                    optionValue="value" appendTo="body" [style]="{'width':'150px'}"></p-dropdown>
                 </td>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="footer">
-              <tr>
-                <td colspan="4" class="text-right">
-                  <button pButton label="Agregar Insumo" icon="pi pi-plus" class="p-button-sm p-button-outlined"
-                    (click)="agregarRepuesto()" type="button"></button>
+                <td>
+                  {{ grupo.get('descripcion')?.value }}
+                </td>
+                <td>
+                  <input pInputText formControlName="observacion" class="w-full" placeholder="Ingrese observación..." />
                 </td>
               </tr>
             </ng-template>
@@ -239,6 +282,45 @@
                 <td>
                   <input pInputText formControlName="observaciones" class="w-full"
                     placeholder="Ingrese observación..." />
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+        </div>
+      </div>
+
+      <div class="title-container" *ngIf="repuestosFormArray">
+        <h4><strong> INSUMOS / REPUESTOS </strong></h4>
+        <H6>Registre los repuestos o insumos utilizados en el mantenimiento</H6>
+      </div>
+      <div>
+        <div formArrayName="repuestos" class="w-full px-3">
+          <p-table [value]="repuestosFormArray.controls" responsiveLayout="scroll" styleClass="p-datatable-sm">
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="width: 30%">Nombre Insumo</th>
+                <th style="width: 20%">Cantidad</th>
+                <th style="width: 30%">Comprobante Egreso</th>
+                <th style="width: 10%">Acción</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-repuesto let-i="rowIndex">
+              <tr [formGroupName]="i">
+                <td><input pInputText formControlName="nombreInsumo" class="w-full" placeholder="Nombre" /></td>
+                <td><input pInputText formControlName="cantidad" class="w-full" placeholder="Cant." /></td>
+                <td><input pInputText formControlName="comprobanteEgreso" class="w-full"
+                    placeholder="Ref. / Comprobante" /></td>
+                <td class="text-center">
+                  <button pButton type="button" icon="pi pi-trash"
+                    class="p-button-danger p-button-rounded p-button-text" (click)="eliminarRepuesto(i)"></button>
+                </td>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="footer">
+              <tr>
+                <td colspan="4" class="text-right">
+                  <button pButton label="Agregar Insumo" icon="pi pi-plus" class="p-button-sm p-button-outlined"
+                    (click)="agregarRepuesto()" type="button"></button>
                 </td>
               </tr>
             </ng-template>
