--- a/src/app/Components/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/Components/gestion-usuarios/gestion-usuarios.component.html
@@ -131,6 +131,12 @@
     </div>
 
     <div class="flex flex-column gap-2">
+      <label for="cargoId" class="font-bold">Cargo</label>
+      <p-dropdown id="cargoId" [options]="cargos" formControlName="cargoId" optionLabel="nombre" optionValue="id"
+        placeholder="Seleccione un cargo"></p-dropdown>
+    </div>
+
+    <div class="flex flex-column gap-2">
       <label for="registroInvima" class="font-bold">Registro Invima</label>
       <input id="registroInvima" type="text" pInputText formControlName="registroInvima" />
     </div>
