--- a/src/app/Components/registro/registro.component.html
+++ b/src/app/Components/registro/registro.component.html
@@ -64,6 +64,12 @@
       </div>
 
       <div class="field col-12 md:col-6 lg:col-4">
+        <label class="font-bold">Cargo</label>
+        <p-dropdown [options]="cargos" formControlName="cargoId" optionLabel="nombre" optionValue="id"
+          placeholder="Seleccionar Cargo" styleClass="w-full" appendTo="body" [showClear]="true"></p-dropdown>
+      </div>
+
+      <div class="field col-12 md:col-6 lg:col-4">
         <label for="password" class="font-bold text-900">Contraseña</label>
 
         <p-password id="password" formControlName="password" [toggleMask]="true" [feedback]="false" styleClass="w-full"
