--- a/src/app/Components/userBiomedica/vista-Equipos/hojavida/hojavida.component.html
+++ b/src/app/Components/userBiomedica/vista-Equipos/hojavida/hojavida.component.html
@@ -5,7 +5,11 @@
       <ng-template pTemplate="header">
         <div class="flex justify-content-between align-items-center p-3">
           <span class="text-xl font-bold">Datos del Equipo</span>
-          <p-button *ngIf="!isGuest()" label="Editar" icon="pi pi-pencil" (click)="onEdit()"></p-button>
+          <div class="flex gap-2">
+            <p-button label="Generar PDF" icon="pi pi-file-pdf" (click)="generatePdf()"
+              styleClass="p-button-danger"></p-button>
+            <p-button *ngIf="!isGuest()" label="Editar" icon="pi pi-pencil" (click)="onEdit()"></p-button>
+          </div>
         </div>
       </ng-template>
 
